[package]
name = "pdvrdt"
version = "4.7.0"
edition = "2021"
autobins = false

[[bin]]
name = "pdvrdt-rs"
path = "src/main.rs"

[dependencies]
sodiumoxide = "0.2"
flate2 = "1.0"
png = "0.17"
crc32fast = "1.4"
libc = "0.2"
zeroize = { version = "1", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
